# zip-jar-haskell

./: README.md  zip-jar.cabal
app/: Main.hs
src/: Lib.hs
