name:                zip-jar
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ExcaliburZero/zip-jar-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@nycap.rr.com
copyright:           2016 Christopher Wells
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , zip
                     , path
                     , mtl
                     , transformers
                     , exceptions
  default-language:    Haskell2010

executable zip-jar-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zip-jar
  default-language:    Haskell2010

test-suite zip-jar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zip-jar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/zip-jar
